# tac-6

./: .env.sample  .gitignore  .mcp.json  README.md  copy_api_key.py  playwright-mcp-config.json  playwright.config.js  test_basic_query_e2e.py  test_basic_query_e2e.spec.js  test_basic_query_e2e_runner_1.spec.js  test_claude.bat  test_claude_auth.py  test_claude_env.py  test_claude_subprocess.py  test_complex_query_e2e.py  test_manual.jsonl  test_output.jsonl  test_path.py  test_run_output.txt  test_run_output_fixed.txt  update_env.sh
.claude/: mcp.json  settings.json
.playwright-mcp/: users.csv
adws/: ADW_SIMPLE_FLOWCHART.md  adw simple flow.md  adw_build.py  adw_document.py  adw_patch.py  adw_plan.py  adw_plan_build_test.py  adw_plan_build_test_review.py  adw_review.py  adw_test.py
app/server/: .env.sample  .env.test  pyproject.toml  server.py
app/server/core/: csv_exporter.py  csv_generator.py  data_models.py  llm_processor.py  sql_processor.py
app/server/tests/: test_csv_export.py  test_export.py  test_export_endpoints.py  test_sql_injection.py
app/server/tests/core/: test_csv_exporter.py  test_llm_processor.py
scripts/: setup_api_keys.sh
specs/: issue-21-adw-9347a9a3-sdlc_planner-workflow-testing.md  issue-25-adw-2b08b87c-sdlc_planner-adw-workflow-testing.md  issue-25-adw-2c3c1641-sdlc_planner-test-adw-workflow.md  issue-25-adw-57d3b31c-sdlc_planner-test-adw-workflow.md  issue-25-adw-9ede8ca6-sdlc_planner-test-adw-workflow.md  issue-25-adw-bb2452ad-sdlc_planner-test-adw-workflow.md  issue-31-adw-00620b88-sdlc_planner-csv-export-tables-results.md  (+20 more)
(+28 files in other folders)
