[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "server"
version = "0.1.0"
description = "Natural Language SQL Interface Backend"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi==0.115.13",
    "uvicorn==0.34.3",
    "python-multipart==0.0.20",
    "httpx>=0.27.0",
    "pandas==2.2.3",
    "python-dotenv==1.0.1",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "db*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
